fixed contact buttons spacing

--- a/public/main.css
+++ b/public/main.css
@@ -401,6 +401,11 @@ body {
   text-decoration: none;
 }
 
+.contact-buttons a {
+  padding-top: 5px;
+  height: 30px;
+}
+
 .email-button:hover, .phone-button:hover {
   background-color: #F2B56B;
   color: #083040;
